syntax = "proto3";
option go_package = "lambdastub.bopmatic.com/pb";

service Stubs {
  rpc StubRpc (StubRpcRequest) returns (StubRpcReply) {}
}

message StubRpcRequest {
  string stubRequestField = 1;
}

message StubRpcReply {
  string stubReplyField = 1;
}
